# data-source-app

data-source-app/: .gitignore  FRONTEND_SUMMARY.md  INCREMENTAL_DIFF.md  README.md  THOUGHT_PROCESS.md  config.yml  demo.py  demo_postgres.py  pyproject.toml  requirements.txt
data-source-app/docs/: ADDING_NEW_CONNECTORS.md  architecture.md
data-source-app/frontend/: README.md  app.py  requirements.txt  test_frontend.py  web_app.py
data-source-app/frontend/templates/: base.html  error.html  index.html  metadata.html
data-source-app/sample_data/: sample_metadata.yml  sample_schema.sql
data-source-app/scripts/: create_incremental_diff_schema.sql  create_normalized_schema.sql  drop_old_tables.sql  populate_sample.sh  reset_database.sh  setup_incremental_diff.sh
data-source-app/src/: __init__.py  app.py  config.py
data-source-app/src/connector/: __init__.py  base_connector.py  connector_factory.py
data-source-app/src/credentials/: __init__.py  manager.py
data-source-app/src/db/: __init__.py  connection.py  queries.py
data-source-app/src/exporters/: __init__.py  csv_exporter.py  json_exporter.py  metadata_exporter.py  normalized_postgres_exporter.py  postgres_exporter.py
data-source-app/src/extractor/: __init__.py  metadata_extractor.py  quality_metrics.py
data-source-app/src/models/: __init__.py  normalized_builder.py  normalized_models.py
data-source-app/src/services/: __init__.py  database_service.py  incremental_diff_service.py
data-source-app/src/utils/: __init__.py  (+2 more)
data-source-app/tests/: __init__.py  test_config.py  test_metadata_extractor.py
(+6 files in other folders)
